<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".presentation.performers.detail.PerformerDetailActivity">

    <TextView
        android:id="@+id/performer_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:text="@string/name_performer_detail" />

    <TextView
        android:id="@+id/performer_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_textview_shape" />

    <TextView
        android:id="@+id/performer_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:text="@string/description_performer_detail" />

    <TextView
        android:id="@+id/performer_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_textview_shape" />

    <TextView
        android:id="@+id/performer_birthday_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:text="@string/birthday_performer_detail" />

    <TextView
        android:id="@+id/performer_birthday_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_textview_shape" />

    <TextView
        android:id="@+id/performer_image_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginBottom="5dp"
        android:text="@string/image_performer_detail" />

    <ImageView
        android:id="@+id/performer_image_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_textview_shape" />

</LinearLayout>