<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".presentation.albums.detail.tracks.TrackActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/track_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/name_track"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/track_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/name_track"
            android:background="@drawable/input_textview_shape"
            android:hint="@string/name_track"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/track_duration_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/duration_track"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/track_duration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/duration_track_hint"
            android:background="@drawable/input_textview_shape"
            android:hint="@string/duration_track_hint"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/add_track_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_add"
        android:enabled="false"
        android:text="@string/add_track_album_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>